@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-30T16:13:23Z",
-  "count_outdated" : 416,
-  "uniques_outdated" : 27,
+  "timestamp" : "2022-07-01T08:12:31Z",
+  "count_outdated" : 417,
+  "uniques_outdated" : 28,
   "count" : 427,
   "uniques" : 31,
   "views" : [
-    {
-      "timestamp": "2022-06-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-18T00:00:00Z",
       "count": 4,
