@@ -1,12 +1,7 @@
 {
-  "count": 11,
+  "count": 10,
   "uniques": 1,
   "views": [
-    {
-      "timestamp": "2022-06-17T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-06-18T00:00:00Z",
       "count": 4,
