@@ -1,3 +1,10 @@
+2022-07-01T08:12:31Z:
+* notice: last 14d: unq all: 1 10
+* notice: prev accum: outdated-unq outdated-all / unq all: 27 416 / 31 427
+* notice: next accum: outdated-unq outdated-all / unq all: 28 417 / 31 427
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-06-17] / []
+
 2022-06-30T16:13:23Z:
 * notice: last 14d: unq all: 1 11
 * notice: prev accum: outdated-unq outdated-all / unq all: 26 410 / 31 425
